--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,6 +35,7 @@ COPY environment.yml .
 RUN conda env create -f environment.yml
 SHELL ["conda", "run", "-n", "topofit", "/bin/bash", "-c"]
 RUN pip install torch-scatter -f https://data.pyg.org/whl/torch-1.11.0+cu113.html
+RUN pip install surfa
 RUN apt-get clean
 RUN pip cache purge
 RUN conda clean -a
