--- a/docker/environment.yml
+++ b/docker/environment.yml
@@ -75,7 +75,9 @@ dependencies:
     - cython==0.29.30
     - install==1.3.5
     - joblib==1.1.0
+    - nibabel==4.0.2
     - numpy-stl==2.17.1
+    - nvidia-ml-py3==7.352.0
     - packaging==21.3
     - pyparsing==3.0.9
     - python-dateutil==2.8.2
@@ -84,4 +86,4 @@ dependencies:
     - scipy==1.7.3
     - stl==0.0.3
     - threadpoolctl==3.1.0
-prefix: /data/users2/washbee/anaconda3/envs/topofit
+prefix: /opt/miniconda3/envs/topofit
